--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "graphql-request": "^7.1.2",
     "he": "^1.2.0",
