--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clsx": "^2.1.1",
     "graphql-request": "^7.1.2",
     "he": "^1.2.0",
-    "next": "15.3.1",
+    "next": "^15.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
